--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,10 @@ machine:
   environment:
     APP_VERSION: b${CIRCLE_BUILD_NUM}-${CIRCLE_SHA1}
 dependencies:
+  pre:
+    - mkdir -p ~/.aws
+    - envsubst < .aws/credentials.template > ~/.aws/credentials
+    - envsubst < .aws/config.template > ~/.aws/config
   override:
     - mkdir -p ~/.bintray && envsubst < .credentials > ~/.bintray/.credentials
     - ./generate.sh "accounts.onplatforms.net" "schema/accounts"
