--- a/circle.yml
+++ b/circle.yml
@@ -20,3 +20,4 @@ deployment:
     branch: master
     commands:
       - sbt "set version := \"0.0.1-${APP_VERSION}\"" publish
+      - echo -n ${APP_VERSION} | aws s3 cp - s3://public.onplatforms.net/onplatforms.net/datasource/latest.version
