--- a/circle.yml
+++ b/circle.yml
@@ -10,8 +10,11 @@ dependencies:
     - envsubst < .aws/config.template > ~/.aws/config
   override:
     - mkdir -p ~/.bintray && envsubst < .credentials > ~/.bintray/.credentials
-    - ./generate.sh "accounts.onplatforms.net" "schema/accounts" "net.onplatforms.accounts.io.rdb"
-    - sbt package
+    - ./dbmigrate.sh "www.onplatforms.net" "schema/www" && \
+      ./dbmigrate.sh "accounts.onplatforms.net" "schema/accounts"
+    - sbt -Dsbt.RDB_USER=ubuntu \
+          -Dsbt.RDB_PASS="" \
+          slick-gen package
 test:
   override:
     - sbt test
